--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Music Says it Simply - a documentary about The Cast</title>
+		<title>Operatic - ein Film über das Opern-Ensemble "The Cast"</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
