--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
-						<li>&copy; Operatic the Film. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; Operatic the Film. All rights reserved.</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li><a href="http://operaticthefilm.com">English</a></li>
 					</ul>
 				</div>
 			</section>
