--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!-- Header -->
 			<section id="header" class="dark">
                 <video autoplay style="width:100%; height: auto; position:absolute; top: 0px; left: 0px; z-index: -1;" alt="Operatic - in theaters May 2015">
-                <source src="assets/operatic_web_header.m4v" />
+                <source src="assets/operatic_web_header.m4v" type="video/m4v" />
                 <source src="assets/operatic_web_header.mp4" type="video/mp4" />
                     <source src="assets/operatic_web_header.ogv" type="video/ogg" />
                     <source src="assets/operatic_web_header.webm" type="video/webm" />
