--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	<head>
 		<title>Operatic - ein Film über das Opern-Ensemble "The Cast"</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
+    <meta name="description" content="Operatic ist ein Musikdokumentarfilm über das junge Opern-Ensemble The Cast. dessen Ansatz es ist Opernmusik einem
+                                        breiteren Publikum zugänglich zu machen, ausserhalb des Establishments der klassisichen
+                                                                            Operhäuser.</p>
+                                                                                                            <p>Das Filmteam begleitet das Ensemble über ein Jahr lang auf seiner Deutschlandtour
+                                                                                                                                                mit Konzerten in Hamburg, Berlin, Bremen, Köln, Bonn und einem besonderen Konzert
+                                                                                                                                                                                    in Paris.</p>
+                                                                                                                                                                                                                    <p>Der Film gibt einen Einblick in das Leben freiberuflicher Opernsänger, die
+                                                                                                                                                                                                                                                        Zusammmenarbeit in einem Ensemble und die Notwendigkeit als Musiker neue Wege gehen zu müssen, um mit den Gegensätzlichkeiten der aktuellen Situation in der Opern- und
+                                                                                                                                                                                                                                                                                                                                Musikindustrie überleben zu können."  />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
