update meta tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<title>Operatic - ein Film über das Opern-Ensemble "The Cast"</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Operatic ist ein Musikdokumentarfilm über das junge Opern-Ensemble The Cast. Dessen Ansatz es ist Opernmusik einem breiteren Publikum zugänglich zu machen, ausserhalb des Establishments der klassisichen Operhäuser. Das Filmteam begleitet das Ensemble über ein Jahr lang auf seiner Deutschlandtour mit Konzerten in Hamburg, Berlin, Bremen, Köln, Bonn und einem besonderen Konzert in Paris. Der Film gibt einen Einblick in das Leben freiberuflicher Opernsänger, die Zusammmenarbeit in einem Ensemble und die Notwendigkeit als Musiker neue Wege gehen zu müssen, um mit den Gegensätzlichkeiten der aktuellen Situation in der Opern- und Musikindustrie überleben zu können."  />
-		<meta name="keywords" content="Operatic opera dokumentarfilm film Cast" />
+		<meta name="keywords" content="Operatic opera dokumentarfilm film Cast Campbell Vertesi Alison Scherzer Brigitte Heuser Bryn Vertesi Kevin Moreno Till Bleckwedel Dimitrij Morozov" />
+		<meta name="robots" content="index, follow" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
