fix image location in fb tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="keywords" content="Operatic opera dokumentarfilm film Cast Campbell Vertesi Alison Scherzer Brigitte Heuser Bryn Vertesi Kevin Moreno Till Bleckwedel Dimitrij Morozov" />
 		<meta name="robots" content="index, follow" />
 		<meta property="og:url" content="http://operaticthefilm.com/" />
-		<meta property="og:image" content="http://operatic.de/images/fb-poster.jpg" />
+		<meta property="og:image" content="http://operaticthefilm.com/images/fb-poster.jpg" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
