--- a/index.html
+++ b/index.html
@@ -103,8 +103,23 @@
                                   <td>25.6.2015 | 19:00 Uhr</td>
                                   <td><a href="http://www.filmforum.de/">Info</a></td>
                                 </tr>
+<tr>
+                                  <td>Bochum</td>
+                                  <td>TBA</td>
+                                  <td></td>
+                                </tr>
+                                <tr>
+                                  <td>Essen</td>
+                                  <td>TBA</td>
+                                  <td></td>
+                                </tr>
                                 <tr>
                                   <td>Hamburg</td>
+                                  <td>TBA</td>
+                                  <td></td>
+                                </tr>
+                                <tr>
+                                  <td>Munich</td>
                                   <td>TBA</td>
                                   <td></td>
                                 </tr>
