correct Munich to München

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                   <td></td>
                                 </tr>
                                 <tr>
-                                  <td>Munich</td>
+                                  <td>München</td>
                                   <td>TBA</td>
                                   <td></td>
                                 </tr>
