--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                                     <td><a href="http://www.bremerfilmkunsttheater.de/Kino_Reservierungen/Schauburg.html">Info</a></td>
                                 </tr>
                                 <tr>
+                                  <td>Wiesbaden | Caligari Filmbühne</td>
+                                  <td>07.06.2015 20:00 Uhr</td>
+                                  <td><a href="http://www.wiesbaden.de/microsite/caligari/index.php">Info</a></td>
+                                </tr>
+                                <tr>
                                   <td>Paris | T.A.C. Malambo Studio</td>
                                   <td>12.6.2015</td>
                                   <td><a href="http://www.malambo.fr/">Info</a></td>
