close an extra td in munchen listing

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                   <td><a href="http://www.dortmunder-u.de/">Info</a></td>
                                 </tr>
                                 <tr>
-                                  <td>München | Monopol<td>
+                                  <td>München | Monopol</td>
                                   <td>17.6.2015 | 19:00 Uhr</td>
                                   <td><a href="http://www.monopol-kino.de/">Tickets</a></td>
                                 </tr>
