--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 </tr>
                                 <tr>
                                   <td>Wiesbaden | Caligari Filmbühne</td>
-                                  <td>6.7.2015 20:00 Uhr</td>
+                                  <td>6.7.2015 | 20:00 Uhr</td>
                                   <td><a href="http://www.wiesbaden.de/microsite/caligari/index.php">Info</a></td>
                                 </tr>
 <tr>
