--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                   <td><a href="http://doublelune.com/lcdh/blog/12-juin-the-cast-operatic-le-film/">Info</a></td>
                                 </tr>
                                 <tr>
-                                  <td>Dortmund | Kino im Dortmunder U</td>
+                                  <td>Dortmund | stARTcamp</td>
                                   <td>13.6.2015</td>
                                   <td><a href="http://www.dortmunder-u.de/">Info</a></td>
                                 </tr>
@@ -107,11 +107,6 @@
                                   <td>Duisburg | Filmforum Duisburg</td>
                                   <td>25.6.2015 | 19:00 Uhr</td>
                                   <td><a href="http://www.filmforum.de/">Info</a></td>
-                                </tr>
-                                <tr>
-                                  <td>Wiesbaden | Caligari Filmbühne</td>
-                                  <td>6.7.2015 | 20:00 Uhr</td>
-                                  <td><a href="http://www.wiesbaden.de/microsite/caligari/index.php">Info</a></td>
                                 </tr>
                                <tr>
                                   <td>Minneapolis | The Heights Theatre</td>
