--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 </tr>
                                 <tr>
                                   <td>Duisburg | Filmforum Duisburg</td>
-                                  <td>25.6.2015 | 19:00 Uhr</td>
+                                  <td>25.6.2015 | 20:30 Uhr</td>
                                   <td><a href="http://www.filmforum.de/">Info</a></td>
                                 </tr>
                                <tr>
@@ -255,8 +255,8 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/OperaticTheFilm" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="http://facebook.com/operaticthefilm" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://twitter.com/operaticfilm" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="http://facebook.com/operaticfilm" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://instagram.com/operaticthefilm/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://github.com/ohthehugemanatee/operatic" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
