--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 		<!-- Second -->
 			<section id="second" class="main">
 				<header>
+          <div class="container">
+            <span class="image featured"><img src="images/movie_poster_de.jpg" alt="Movie poster" /></span>
+          </div>
 					<div class="container">
 						<h2>Vorführungen</h2>
                         <br />
