update berlin screening link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <tr>
                                   <td>Berlin | Eva Lichtspiele</td>
                                   <td>01.07.2015 | 20:00</td>
-                                  <td><a href="http://www.eva-lichtspiele.de/">Info</a></td>
+                                  <td><a href="http://www.eva-lichtspiele.de/index.php?p=m&mid=1569">Info</a></td>
                                 </tr>
                                   <tr>
                                     <td>Wiesbaden | Caligari Filmbühne</td>
