update bochum screening link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <tr>
                                   <td>Bochum | Endstation Kino</td>
                                   <td>8.7.2015 | 20:00</td>
-                                  <td><a href="http://endstation-kino.de/">Info</a></td>
+                                  <td><a href="http://endstation-kino.de/operatic.html">Info</a></td>
                                 </tr>
                                 <tr>
                                   <td>Essen</td>
