--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
 				</header>
                 <div class="content dark style2">
                     <div class="container">
-                        <div class='embed-container'>
+                      <h2>Sehen Sie sich den Trailer an</h2>
+                      <div class='embed-container'>
                             <iframe src='https://player.vimeo.com/video/120569251?api=1&player_id=vimeo-player-1' id="vimeo-player-1" data-progress="true" data-seek="true" data-bounce="true" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                         </div>
-                    <h2>Sehen Sie sich den Trailer an</h2>
+                      <h2><a href="http://operaticthefilm.com/special-edition.html">"Sehen Sie sich die Online Special Edition an</a></h2>
                     </div>
                 </div>
 			</section>
