--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                         <p>Und wie sieht das Leben eines Opernsängers abseits der Bühne aus?</p>
                         <p>Operatic ist ein Film über das Opern-Ensemble "The Cast" und dessen Reise durch die Opernwelt.</p>
                         <p>Ein Film in dem Musik die Erzählerrolle übernimmt und ein paar der schönsten Operngeschichten erzählt werden.</p>
-                        <p>Ab Mai in ausgewählten Programmkinos.</p>
+                        <p><a href="http://operaticthefilm.com/special-edition.html">Sehen Sie sich kostenlos die Special Edition des Films.</a></p>
+            <p><strong>Because music is for everybody</strong></p>
 					</div>
 				</header>
                 <div class="content dark style2">
