[special-edition] Remove extra quotation mark

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                       <div class='embed-container'>
                             <iframe src='https://player.vimeo.com/video/120569251?api=1&player_id=vimeo-player-1' id="vimeo-player-1" data-progress="true" data-seek="true" data-bounce="true" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                         </div>
-                      <h2><a href="http://operaticthefilm.com/special-edition.html">"Sehen Sie sich die Online Special Edition an</a></h2>
+                      <h2><a href="http://operaticthefilm.com/special-edition.html">Sehen Sie sich die Online Special Edition an</a></h2>
                     </div>
                 </div>
 			</section>
