--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 				<header>
 					<div class="container">
 						<h2>Presse</h2>
-						<p>Für weitere Informationen, Pressematerial und eine Akredditierung für die Premiere füllen Sie
+						<p>Für weitere Informationen oder Pressematerial füllen Sie
                             bitte das untenstehende Formular aus.</p>
 
                         <p>Wir melden uns umgehend bei Ihnen.</p>
