--- a/index.html
+++ b/index.html
@@ -240,9 +240,8 @@
 				</header>
 				<div class="content style4 featured">
 					<div class="container 75%">
-						<form method="post" accept-charset="UTF-8" action="https://formkeep.com/f/181cb40d1eb7" method="POST">
-                            <input type="hidden" name="subject" id="subject" value="Form submission from Operatic">
-                            <div class="row 50%">
+						<form method="post" accept-charset="UTF-8" action="https://formspree.io/j.katsimitsoulias@gmail.com" method="POST">
+                <input type="hidden" name="subject" id="subject" value="Form submission from Operatic">
 								<div class="6u"><input type="text" name="name" id="name" placeholder="Name" /></div>
 								<div class="6u"><input type="text" name="email" id="email" placeholder="Email" /></div>
 							</div>
